Android: Tabs are now below the Action Bar. Bug fixes.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/Main.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Main.axml
@@ -2,13 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_layout"
     android:orientation="horizontal"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <android.support.v4.view.ViewPager
-        android:id="@+id/main_pager"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/main_miniplayer" />
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+  <android.support.v4.view.ViewPager
+      android:id="@+id/main_pager"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:layout_above="@+id/main_miniplayer">
+    <android.support.v4.view.PagerTitleStrip
+          android:id="@+id/main_pager_title_strip"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:layout_gravity="top"
+          android:background="#333333"
+          android:textColor="#fff"
+          android:paddingTop="4dp"
+          android:paddingBottom="4dp" />
+  </android.support.v4.view.ViewPager>
     <LinearLayout
         android:id="@+id/main_miniplayer"
         android:orientation="horizontal"
