--- a/MPfm/MPfm.Android/Resources/Layout/GenericCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/GenericCell.axml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
-   android:layout_height="70dp"              
+   android:layout_height="44dp"              
    android:orientation="horizontal">
   <ImageView
     android:id="@+id/genericcell_image"
-    android:layout_width="70dp"
-    android:layout_height="70dp"
-    android:src="@drawable/icon"
-   />
+    android:layout_width="44dp"
+    android:layout_height="44dp"
+    android:layout_marginRight="8dp"
+    android:src="@drawable/icon" />
   <TextView
       android:id="@+id/genericcell_title"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textColor="#FF000000"
-      android:textSize="20dip"
-     />
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"      
+      android:gravity="center_vertical"
+      android:textColor="#000000"
+      android:textSize="14dp" />
 </LinearLayout>
